force-app/main/default/objects/Archive_Email__b/Archive_Email__b.object-meta.xml
<CustomObject>
    <label>Archive Email</label>
    <pluralLabel>Archive Emails</pluralLabel>
</CustomObject>