force-app/main/default/objects/Archive_Email__b/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <description>Store all attachment id, up to 50 attachment per email</description>
    <label>Attachments</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>