force-app/main/default/objects/Archive_Email__b/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Archive Emails</relationshipLabel>
    <relationshipName>Archive_Emails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>