force-app/main/default/objects/Archive_Email__b/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <label>CcAddress</label>
    <length>200</length>
    <type>Text</type>
</CustomField>