force-app/main/default/objects/Archive_Email__b/fields/ContentDocumentIDs__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentIDs__c</fullName>
    <description>Contains the email message contentdocument ids</description>
    <label>ContentDocumentIDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>