force-app/main/default/objects/Archive_Email__b/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>FromAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>