force-app/main/default/objects/Archive_Email__b/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>FromName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>