force-app/main/default/objects/Archive_Email__b/fields/TextBody__c.field-meta.xml
<CustomField>
    <fullName>TextBody__c</fullName>
    <label>TextBody</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>